@@ -90,7 +90,7 @@ public class CugConfigurationTest extends AbstractCugTest {
 
     @Test
     public void testGetValidators() {
-        List<? extends ValidatorProvider> l = new CugConfiguration().getValidators("wspName", ImmutableSet.of(), new MoveTracker());
+        List<? extends ValidatorProvider> l = new CugConfiguration().getValidators("wspName", Set.of(), new MoveTracker());
         assertEquals(1, l.size());
         assertTrue(l.iterator().next() instanceof CugValidatorProvider);
     }
@@ -111,7 +111,7 @@ public class CugConfigurationTest extends AbstractCugTest {
     public void testGetPermissionProviderDisabled() {
         CugConfiguration cc = createConfiguration(ConfigurationParameters.of(CugConstants.PARAM_CUG_ENABLED, false));
 
-        PermissionProvider pp = cc.getPermissionProvider(root, root.getContentSession().getWorkspaceName(), ImmutableSet.of(EveryonePrincipal.getInstance()));
+        PermissionProvider pp = cc.getPermissionProvider(root, root.getContentSession().getWorkspaceName(), Set.of(EveryonePrincipal.getInstance()));
         assertSame(EmptyPermissionProvider.getInstance(), pp);
     }
 
@@ -121,7 +121,7 @@ public class CugConfigurationTest extends AbstractCugTest {
                 CugConstants.PARAM_CUG_ENABLED, false,
                 CugConstants.PARAM_CUG_SUPPORTED_PATHS, "/content");
         CugConfiguration cc = createConfiguration(params);
-        PermissionProvider pp = cc.getPermissionProvider(root, "default", ImmutableSet.of(EveryonePrincipal.getInstance()));
+        PermissionProvider pp = cc.getPermissionProvider(root, "default", Set.of(EveryonePrincipal.getInstance()));
         assertSame(EmptyPermissionProvider.getInstance(), pp);
     }
 
@@ -129,7 +129,7 @@ public class CugConfigurationTest extends AbstractCugTest {
     public void testGetPermissionProviderDisabled3() {
         CugConfiguration cc = createConfiguration(ConfigurationParameters.EMPTY);
 
-        PermissionProvider pp = cc.getPermissionProvider(root, "default", ImmutableSet.of(EveryonePrincipal.getInstance()));
+        PermissionProvider pp = cc.getPermissionProvider(root, "default", Set.of(EveryonePrincipal.getInstance()));
         assertSame(EmptyPermissionProvider.getInstance(), pp);
     }
 
@@ -138,7 +138,7 @@ public class CugConfigurationTest extends AbstractCugTest {
         // enabled but no supported paths specified
         CugConfiguration cc = createConfiguration(ConfigurationParameters.of(CugConstants.PARAM_CUG_ENABLED, true));
 
-        PermissionProvider pp = cc.getPermissionProvider(root, "default", ImmutableSet.of(EveryonePrincipal.getInstance()));
+        PermissionProvider pp = cc.getPermissionProvider(root, "default", Set.of(EveryonePrincipal.getInstance()));
         assertSame(EmptyPermissionProvider.getInstance(), pp);
     }
 
@@ -149,7 +149,7 @@ public class CugConfigurationTest extends AbstractCugTest {
                 CugConstants.PARAM_CUG_SUPPORTED_PATHS, "/content");
         CugConfiguration cc = createConfiguration(params);
 
-        PermissionProvider pp = cc.getPermissionProvider(root, "default", ImmutableSet.of(EveryonePrincipal.getInstance()));
+        PermissionProvider pp = cc.getPermissionProvider(root, "default", Set.of(EveryonePrincipal.getInstance()));
         assertTrue(pp instanceof CugPermissionProvider);
     }
 
@@ -193,7 +193,7 @@ public class CugConfigurationTest extends AbstractCugTest {
                 (SystemUserPrincipal) () -> "systemUser");
 
         for (Principal p : excluded) {
-            Set<Principal> principals = ImmutableSet.of(p, EveryonePrincipal.getInstance());
+            Set<Principal> principals = Set.of(p, EveryonePrincipal.getInstance());
             PermissionProvider pp = cc.getPermissionProvider(root, "default", principals);
 
             assertSame(EmptyPermissionProvider.getInstance(), pp);
@@ -221,7 +221,7 @@ public class CugConfigurationTest extends AbstractCugTest {
 
     private static void assertSupportedPaths(@NotNull CugConfiguration configuration, @NotNull String... paths) {
         Set<String> expected = ImmutableSet.copyOf(paths);
-        assertEquals(expected, configuration.getParameters().getConfigValue(CugConstants.PARAM_CUG_SUPPORTED_PATHS, ImmutableSet.of()));
+        assertEquals(expected, configuration.getParameters().getConfigValue(CugConstants.PARAM_CUG_SUPPORTED_PATHS, Set.of()));
     }
 
     @Test
