@@ -119,8 +119,8 @@ public class GroupActionTest extends AbstractSecurityTest {
         testUser02 = getUserManager(root).createUser(TEST_USER_PREFIX + "02", "");
         testGroup.addMember(testUser02);
 
-        Set<String> memberIds = ImmutableSet.of(testUser01.getID());
-        Set<String> failedIds = ImmutableSet.of(testUser02.getID(), testGroup.getID());
+        Set<String> memberIds = Set.of(testUser01.getID());
+        Set<String> failedIds = Set.of(testUser02.getID(), testGroup.getID());
         Iterable<String> ids = Iterables.concat(memberIds, failedIds);
 
         testGroup.addMembers(Iterables.toArray(ids, String.class));
@@ -130,7 +130,7 @@ public class GroupActionTest extends AbstractSecurityTest {
 
     @Test
     public void testMembersAddedNonExisting() throws Exception {
-        Set<String> nonExisting = ImmutableSet.of("blinder", "passagier");
+        Set<String> nonExisting = Set.of("blinder", "passagier");
 
         testGroup.addMembers(nonExisting.toArray(new String[0]));
         verify(groupAction, times(1)).onMembersAdded(testGroup, Collections.emptySet(), nonExisting, root, getNamePathMapper());
@@ -142,8 +142,8 @@ public class GroupActionTest extends AbstractSecurityTest {
         testUser02 = getUserManager(root).createUser(TEST_USER_PREFIX + "02", "");
         testGroup.addMember(testUser01);
 
-        Set<String> memberIds = ImmutableSet.of(testUser01.getID());
-        Set<String> failedIds = ImmutableSet.of(testUser02.getID(), testGroup.getID());
+        Set<String> memberIds = Set.of(testUser01.getID());
+        Set<String> failedIds = Set.of(testUser02.getID(), testGroup.getID());
         Iterable<String> ids = Iterables.concat(memberIds, failedIds);
 
         testGroup.removeMembers(Iterables.toArray(ids, String.class));
@@ -152,7 +152,7 @@ public class GroupActionTest extends AbstractSecurityTest {
 
     @Test
     public void testMembersRemovedNonExisting() throws Exception {
-        Set<String> nonExisting = ImmutableSet.of("blinder", "passagier");
+        Set<String> nonExisting = Set.of("blinder", "passagier");
 
         testGroup.removeMembers(nonExisting.toArray(new String[0]));
         verify(groupAction, times(1)).onMembersRemoved(testGroup, Collections.emptySet(), nonExisting, root, getNamePathMapper());
