@@ -43,7 +43,6 @@ import javax.jcr.PropertyType;
 
 import org.apache.jackrabbit.guava.common.collect.ComparisonChain;
 import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.guava.common.collect.Iterables;
 import org.apache.jackrabbit.guava.common.collect.Lists;
 import org.apache.jackrabbit.guava.common.collect.Maps;
@@ -105,7 +104,6 @@ import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.TemporaryFolder;
 
-import static org.apache.jackrabbit.guava.common.collect.ImmutableSet.of;
 import static org.apache.jackrabbit.guava.common.collect.Lists.newArrayList;
 import static java.util.Arrays.asList;
 import static org.apache.jackrabbit.JcrConstants.JCR_CONTENT;
@@ -259,8 +257,8 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void indexSelection() throws Exception {
-        createIndex("test1", of("propa", "propb"));
-        createIndex("test2", of("propc"));
+        createIndex("test1", Set.of("propa", "propb"));
+        createIndex("test2", Set.of("propc"));
 
         Tree test = root.getTree("/").addChild("test");
         test.addChild("a").setProperty("propa", "foo");
@@ -281,7 +279,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void indexSelectionVsNodeType() throws Exception {
-        Tree luceneIndex = createIndex("test1", of("propa"));
+        Tree luceneIndex = createIndex("test1", Set.of("propa"));
         // decrease cost of lucene property index
         luceneIndex.setProperty(IndexConstants.ENTRY_COUNT_PROPERTY_NAME, 5L, Type.LONG);
 
@@ -311,7 +309,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
     @Test
     public void indexSelectionFulltextVsNodeType() throws Exception {
         Tree nodeTypeIdx = root.getTree("/oak:index/nodetype");
-        nodeTypeIdx.setProperty(PropertyStates.createProperty(DECLARING_NODE_TYPES, of("nt:file"), NAMES));
+        nodeTypeIdx.setProperty(PropertyStates.createProperty(DECLARING_NODE_TYPES, Set.of("nt:file"), NAMES));
         nodeTypeIdx.setProperty(IndexConstants.REINDEX_PROPERTY_NAME, true);
         //Set the cost to highest to ensure that if Lucene index opts in then
         //it always wins. In actual case Lucene index should not participate
@@ -334,11 +332,11 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void declaringNodeTypeSameProp() throws Exception {
-        createIndex("test1", of("propa"));
+        createIndex("test1", Set.of("propa"));
 
-        Tree indexWithType = createIndex("test2", of("propa"));
+        Tree indexWithType = createIndex("test2", Set.of("propa"));
         indexWithType.setProperty(PropertyStates
-                .createProperty(DECLARING_NODE_TYPES, of("nt:unstructured"),
+                .createProperty(DECLARING_NODE_TYPES, Set.of("nt:unstructured"),
                         Type.STRINGS));
 
         Tree test = root.getTree("/").addChild("test");
@@ -368,9 +366,9 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void declaringNodeTypeSingleIndex() throws Exception {
-        Tree indexWithType = createIndex("test2", of("propa", "propb"));
+        Tree indexWithType = createIndex("test2", Set.of("propa", "propb"));
         indexWithType.setProperty(PropertyStates
-            .createProperty(DECLARING_NODE_TYPES, of("nt:unstructured"),
+            .createProperty(DECLARING_NODE_TYPES, Set.of("nt:unstructured"),
                 Type.STRINGS));
 
         Tree test = root.getTree("/").addChild("test");
@@ -396,17 +394,17 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
         String propNoIdxQuery = "select [jcr:path] from [nt:base] where [propb] = 'baz'";
         assertThat(explain(propNoIdxQuery), containsString("no-index"));
-        assertQuery(propNoIdxQuery, ImmutableList.<String>of());
+        assertQuery(propNoIdxQuery, ImmutableList.of());
     }
 
     @Test
     public void usedAsNodeTypeIndex() throws Exception {
         Tree nodeTypeIdx = root.getTree("/oak:index/nodetype");
-        nodeTypeIdx.setProperty(PropertyStates.createProperty(DECLARING_NODE_TYPES, of("nt:resource"), NAMES));
+        nodeTypeIdx.setProperty(PropertyStates.createProperty(DECLARING_NODE_TYPES, Set.of("nt:resource"), NAMES));
         nodeTypeIdx.setProperty(IndexConstants.REINDEX_PROPERTY_NAME, true);
 
-        Tree indexWithType = createIndex("test2", of(JcrConstants.JCR_PRIMARYTYPE, "propb"));
-        indexWithType.setProperty(PropertyStates.createProperty(DECLARING_NODE_TYPES, of("nt:file"), NAMES));
+        Tree indexWithType = createIndex("test2", Set.of(JcrConstants.JCR_PRIMARYTYPE, "propb"));
+        indexWithType.setProperty(PropertyStates.createProperty(DECLARING_NODE_TYPES, Set.of("nt:file"), NAMES));
 
         Tree test = root.getTree("/").addChild("test");
         setNodeType(test, "nt:file");
@@ -426,11 +424,11 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
     public void usedAsNodeTypeIndex2() throws Exception {
         //prevent the default nodeType index from indexing all types
         Tree nodeTypeIdx = root.getTree("/oak:index/nodetype");
-        nodeTypeIdx.setProperty(PropertyStates.createProperty(DECLARING_NODE_TYPES, of("nt:resource"), NAMES));
+        nodeTypeIdx.setProperty(PropertyStates.createProperty(DECLARING_NODE_TYPES, Set.of("nt:resource"), NAMES));
         nodeTypeIdx.setProperty(IndexConstants.REINDEX_PROPERTY_NAME, true);
 
-        Tree indexWithType = createIndex("test2", of("propb"));
-        indexWithType.setProperty(PropertyStates.createProperty(DECLARING_NODE_TYPES, of("nt:file"), NAMES));
+        Tree indexWithType = createIndex("test2", Set.of("propb"));
+        indexWithType.setProperty(PropertyStates.createProperty(DECLARING_NODE_TYPES, Set.of("nt:file"), NAMES));
         indexWithType.setProperty(FulltextIndexConstants.FULL_TEXT_ENABLED, true);
         TestUtil.useV2(indexWithType);
 
@@ -455,7 +453,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void nodeName() throws Exception{
-        Tree idx = createIndex("test1", of("propa", "propb"));
+        Tree idx = createIndex("test1", Set.of("propa", "propb"));
         Tree rules = idx.addChild(FulltextIndexConstants.INDEX_RULES);
         rules.setOrderableChildren(true);
         Tree rule = rules.addChild("nt:base");
@@ -516,7 +514,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void emptyIndex() throws Exception{
-        Tree idx = createIndex("test1", of("propa", "propb"));
+        Tree idx = createIndex("test1", Set.of("propa", "propb"));
         idx.addChild(PROP_NODE).addChild("propa");
         root.commit();
 
@@ -530,7 +528,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void explainScoreTest() throws Exception {
-        Tree idx = createIndex("test1", of("propa"));
+        Tree idx = createIndex("test1", Set.of("propa"));
         idx.addChild(PROP_NODE).addChild("propa");
         root.commit();
 
@@ -547,12 +545,12 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
     //OAK-2568
     @Test
     public void multiValueAnd() throws Exception{
-        Tree idx = createIndex("test1", of("tags"));
+        Tree idx = createIndex("test1", Set.of("tags"));
         root.commit();
 
         Tree test = root.getTree("/").addChild("test");
-        test.addChild("a").setProperty("tags", of("a", "b"), Type.STRINGS);
-        test.addChild("b").setProperty("tags", of("a","c"), Type.STRINGS);
+        test.addChild("a").setProperty("tags", Set.of("a", "b"), Type.STRINGS);
+        test.addChild("b").setProperty("tags", Set.of("a","c"), Type.STRINGS);
         root.commit();
 
         String q = "SELECT * FROM [nt:unstructured] as content WHERE ISDESCENDANTNODE('/content/dam/en/us')\n" +
@@ -579,12 +577,12 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void multiValuesLike() throws Exception{
-        Tree idx = createIndex("test1", of("references"));
+        Tree idx = createIndex("test1", Set.of("references"));
         root.commit();
 
         Tree test = root.getTree("/").addChild("test");
-        test.addChild("a").setProperty("references", of("/some/content/AAA", "/some/content/BBB"), Type.STRINGS);
-        test.addChild("b").setProperty("references", of("/some/content/AAA", "/some/content/CCC"), Type.STRINGS);
+        test.addChild("a").setProperty("references", Set.of("/some/content/AAA", "/some/content/BBB"), Type.STRINGS);
+        test.addChild("b").setProperty("references", Set.of("/some/content/AAA", "/some/content/CCC"), Type.STRINGS);
         root.commit();
 
         String q = "SELECT * FROM [nt:unstructured] as content WHERE references LIKE '/some/content/efjoiefjowfgj/%'";
@@ -595,14 +593,14 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
     //OAK-9481
     @Test
     public void likeQueryOnPropertiesWithExcludedPrefixes() throws Exception {
-        Tree idx = createIndex("test1", of("references"));
+        Tree idx = createIndex("test1", Set.of("references"));
         Tree propIdx = idx.addChild(PROP_NODE).addChild("references");
-        propIdx.setProperty("valueExcludedPrefixes", of("/a/b/c2"), STRINGS);
+        propIdx.setProperty("valueExcludedPrefixes", Set.of("/a/b/c2"), STRINGS);
         root.commit();
 
         Tree test = root.getTree("/").addChild("test");
-        test.addChild("a").setProperty("references", of("/a/b/c1", "/a/b/c2", "/a/b/c10"), Type.STRINGS);
-        test.addChild("b").setProperty("references", of("/a/b/c22","/a/b/d12"), Type.STRINGS);
+        test.addChild("a").setProperty("references", Set.of("/a/b/c1", "/a/b/c2", "/a/b/c10"), Type.STRINGS);
+        test.addChild("b").setProperty("references", Set.of("/a/b/c22","/a/b/d12"), Type.STRINGS);
         root.commit();
 
         // index test1 not picked up because property restriction matches value excluded prefix.
@@ -618,12 +616,12 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void redundantNotNullCheck() throws Exception{
-        Tree idx = createIndex("test1", of("tags"));
+        Tree idx = createIndex("test1", Set.of("tags"));
         root.commit();
 
         Tree test = root.getTree("/").addChild("test");
-        test.addChild("a").setProperty("tags", of("a","b"), Type.STRINGS);
-        test.addChild("b").setProperty("tags", of("a", "c"), Type.STRINGS);
+        test.addChild("a").setProperty("tags", Set.of("a","b"), Type.STRINGS);
+        test.addChild("b").setProperty("tags", Set.of("a", "c"), Type.STRINGS);
         root.commit();
 
         String q = "SELECT * FROM [nt:unstructured] as content WHERE ISDESCENDANTNODE('/content/dam/en/us')\n" +
@@ -656,7 +654,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void rangeQueriesWithLong() throws Exception {
-        Tree idx = createIndex("test1", of("propa", "propb"));
+        Tree idx = createIndex("test1", Set.of("propa", "propb"));
         Tree propIdx = idx.addChild(PROP_NODE).addChild("propa");
         propIdx.setProperty(FulltextIndexConstants.PROP_TYPE, PropertyType.TYPENAME_LONG);
         root.commit();
@@ -684,8 +682,8 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void pathInclude() throws Exception{
-        Tree idx = createIndex("test1", of("propa", "propb"));
-        idx.setProperty(createProperty(PROP_INCLUDED_PATHS, of("/test/a"), Type.STRINGS));
+        Tree idx = createIndex("test1", Set.of("propa", "propb"));
+        idx.setProperty(createProperty(PROP_INCLUDED_PATHS, Set.of("/test/a"), Type.STRINGS));
         //Do not provide type information
         root.commit();
 
@@ -704,8 +702,8 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
     @Test
     public void pathIncludeSubrootIndex() throws Exception {
         Tree subTreeRoot = root.getTree("/").addChild("test");
-        Tree idx = createIndex(subTreeRoot, "test1", of("propa"));
-        idx.setProperty(createProperty(PROP_INCLUDED_PATHS, of("/a"), Type.STRINGS));
+        Tree idx = createIndex(subTreeRoot, "test1", Set.of("propa"));
+        idx.setProperty(createProperty(PROP_INCLUDED_PATHS, Set.of("/a"), Type.STRINGS));
         //Do not provide type information
         root.commit();
 
@@ -723,8 +721,8 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
     @Test
     public void pathQuerySubrootIndex() throws Exception {
         Tree subTreeRoot = root.getTree("/").addChild("test");
-        Tree idx = createIndex(subTreeRoot, "test1", of("propa"));
-        idx.setProperty(createProperty(QUERY_PATHS, of("/test/a"), Type.STRINGS));
+        Tree idx = createIndex(subTreeRoot, "test1", Set.of("propa"));
+        idx.setProperty(createProperty(QUERY_PATHS, Set.of("/test/a"), Type.STRINGS));
         //Do not provide type information
         root.commit();
 
@@ -759,8 +757,8 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
     @Test
     public void pathExcludeSubrootIndex() throws Exception{
         Tree subTreeRoot = root.getTree("/").addChild("test");
-        Tree idx = createIndex(subTreeRoot, "test1", of("propa"));
-        idx.setProperty(createProperty(PROP_EXCLUDED_PATHS, of("/a"), Type.STRINGS));
+        Tree idx = createIndex(subTreeRoot, "test1", Set.of("propa"));
+        idx.setProperty(createProperty(PROP_EXCLUDED_PATHS, Set.of("/a"), Type.STRINGS));
         //Do not provide type information
         root.commit();
 
@@ -785,7 +783,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void determinePropTypeFromRestriction() throws Exception{
-        Tree idx = createIndex("test1", of("propa", "propb"));
+        Tree idx = createIndex("test1", Set.of("propa", "propb"));
         //Do not provide type information
         root.commit();
 
@@ -813,7 +811,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void rangeQueriesWithDouble() throws Exception {
-        Tree idx = createIndex("test1", of("propa", "propb"));
+        Tree idx = createIndex("test1", Set.of("propa", "propb"));
         Tree propIdx = idx.addChild(PROP_NODE).addChild("propa");
         propIdx.setProperty(FulltextIndexConstants.PROP_TYPE, PropertyType.TYPENAME_DOUBLE);
         root.commit();
@@ -836,7 +834,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void rangeQueriesWithString() throws Exception {
-        Tree idx = createIndex("test1", of("propa", "propb"));
+        Tree idx = createIndex("test1", Set.of("propa", "propb"));
         idx.addChild(PROP_NODE).addChild("propa");
         root.commit();
 
@@ -862,7 +860,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void rangeQueriesWithDate() throws Exception {
-        Tree idx = createIndex("test1", of("propa", "propb"));
+        Tree idx = createIndex("test1", Set.of("propa", "propb"));
         Tree propIdx = idx.addChild(PROP_NODE).addChild("propa");
         propIdx.setProperty(FulltextIndexConstants.PROP_TYPE, PropertyType.TYPENAME_DATE);
         root.commit();
@@ -884,7 +882,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void nativeQueries() throws Exception {
-        Tree idx = createIndex("test1", of("propa", "propb"));
+        Tree idx = createIndex("test1", Set.of("propa", "propb"));
         idx.addChild(PROP_NODE).addChild("propa");
         idx.setProperty(FulltextIndexConstants.FUNC_NAME, "foo");
         root.commit();
@@ -902,7 +900,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
     @Test
     public void testWithRelativeProperty() throws Exception{
         Tree parent = root.getTree("/");
-        Tree idx = createIndex(parent, "test1", of("b/propa", "propb"));
+        Tree idx = createIndex(parent, "test1", Set.of("b/propa", "propb"));
         root.commit();
 
         Tree test = parent.addChild("test2");
@@ -916,7 +914,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
     @Test
     public void indexDefinitionBelowRoot() throws Exception {
         Tree parent = root.getTree("/").addChild("test");
-        Tree idx = createIndex(parent, "test1", of("propa", "propb"));
+        Tree idx = createIndex(parent, "test1", Set.of("propa", "propb"));
         idx.setProperty(FulltextIndexConstants.EVALUATE_PATH_RESTRICTION, true);
         idx.addChild(PROP_NODE).addChild("propa");
         root.commit();
@@ -931,7 +929,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
     @Test
     public void indexDefinitionBelowRoot2() throws Exception {
         Tree parent = root.getTree("/").addChild("test");
-        Tree idx = createIndex(parent, "test1", of("propa", "propb"));
+        Tree idx = createIndex(parent, "test1", Set.of("propa", "propb"));
         idx.setProperty(FulltextIndexConstants.EVALUATE_PATH_RESTRICTION, true);
         idx.addChild(PROP_NODE).addChild("propa");
         root.commit();
@@ -947,7 +945,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
     @Test
     public void indexDefinitionBelowRoot3() throws Exception {
         Tree parent = root.getTree("/").addChild("test");
-        Tree idx = createIndex(parent, "test1", of("propa"));
+        Tree idx = createIndex(parent, "test1", Set.of("propa"));
         idx.addChild(PROP_NODE).addChild("propa");
         root.commit();
 
@@ -962,7 +960,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
     @Test
     public void queryPathRescrictionWithoutEvaluatePathRestriction() throws Exception {
         Tree parent = root.getTree("/");
-        Tree idx = createIndex(parent, "test1", of());
+        Tree idx = createIndex(parent, "test1", Set.of());
         idx.addChild(PROP_NODE).addChild("propa");
 
         Tree test = parent.addChild("test");
@@ -970,7 +968,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
         test.addChild("b").addChild("c").addChild("d").setProperty("propa", "a");
 
         parent = root.getTree("/").addChild("subRoot");
-        idx = createIndex(parent, "test1", of());
+        idx = createIndex(parent, "test1", Set.of());
         idx.addChild(PROP_NODE).addChild("propa");
 
         test = parent.addChild("test");
@@ -1009,7 +1007,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void sortQueriesWithLong() throws Exception {
-        Tree idx = createIndex("test1", of("foo", "bar"));
+        Tree idx = createIndex("test1", Set.of("foo", "bar"));
         Tree propIdx = idx.addChild(PROP_NODE).addChild("foo");
         propIdx.setProperty(FulltextIndexConstants.PROP_TYPE, PropertyType.TYPENAME_LONG);
         root.commit();
@@ -1019,9 +1017,9 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void sortQueriesWithLong_OrderedProps() throws Exception {
-        Tree idx = createIndex("test1", of("foo", "bar"));
-        idx.setProperty(createProperty(INCLUDE_PROPERTY_NAMES, of("bar"), STRINGS));
-        idx.setProperty(createProperty(ORDERED_PROP_NAMES, of("foo"), STRINGS));
+        Tree idx = createIndex("test1", Set.of("foo", "bar"));
+        idx.setProperty(createProperty(INCLUDE_PROPERTY_NAMES, Set.of("bar"), STRINGS));
+        idx.setProperty(createProperty(ORDERED_PROP_NAMES, Set.of("foo"), STRINGS));
         Tree propIdx = idx.addChild(PROP_NODE).addChild("foo");
         propIdx.setProperty(FulltextIndexConstants.PROP_TYPE, PropertyType.TYPENAME_LONG);
         root.commit();
@@ -1032,7 +1030,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
     @Test
     public void sortQueriesWithLong_NotIndexed() throws Exception {
         Tree idx = createIndex("test1", Collections.<String>emptySet());
-        idx.setProperty(createProperty(ORDERED_PROP_NAMES, of("foo"), STRINGS));
+        idx.setProperty(createProperty(ORDERED_PROP_NAMES, Set.of("foo"), STRINGS));
         Tree propIdx = idx.addChild(PROP_NODE).addChild("foo");
         propIdx.setProperty(FulltextIndexConstants.PROP_TYPE, PropertyType.TYPENAME_LONG);
         root.commit();
@@ -1050,7 +1048,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
     @Test
     public void sortQueriesWithLong_NotIndexed_relativeProps() throws Exception {
         Tree idx = createIndex("test1", Collections.<String>emptySet());
-        idx.setProperty(createProperty(ORDERED_PROP_NAMES, of("foo/bar"), STRINGS));
+        idx.setProperty(createProperty(ORDERED_PROP_NAMES, Set.of("foo/bar"), STRINGS));
         Tree propIdx = idx.addChild(PROP_NODE).addChild("foo").addChild("bar");
         propIdx.setProperty(FulltextIndexConstants.PROP_TYPE, PropertyType.TYPENAME_LONG);
         root.commit();
@@ -1093,7 +1091,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void sortQueriesWithDouble() throws Exception {
-        Tree idx = createIndex("test1", of("foo", "bar"));
+        Tree idx = createIndex("test1", Set.of("foo", "bar"));
         Tree propIdx = idx.addChild(PROP_NODE).addChild("foo");
         propIdx.setProperty(FulltextIndexConstants.PROP_TYPE, PropertyType.TYPENAME_DOUBLE);
         root.commit();
@@ -1103,9 +1101,9 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void sortQueriesWithDouble_OrderedProps() throws Exception {
-        Tree idx = createIndex("test1", of("foo", "bar"));
-        idx.setProperty(createProperty(INCLUDE_PROPERTY_NAMES, of("bar"), STRINGS));
-        idx.setProperty(createProperty(ORDERED_PROP_NAMES, of("foo"), STRINGS));
+        Tree idx = createIndex("test1", Set.of("foo", "bar"));
+        idx.setProperty(createProperty(INCLUDE_PROPERTY_NAMES, Set.of("bar"), STRINGS));
+        idx.setProperty(createProperty(ORDERED_PROP_NAMES, Set.of("foo"), STRINGS));
         Tree propIdx = idx.addChild(PROP_NODE).addChild("foo");
         propIdx.setProperty(FulltextIndexConstants.PROP_TYPE, PropertyType.TYPENAME_DOUBLE);
         root.commit();
@@ -1133,7 +1131,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void sortQueriesWithString() throws Exception {
-        Tree idx = createIndex("test1", of("foo", "bar"));
+        Tree idx = createIndex("test1", Set.of("foo", "bar"));
         idx.addChild(PROP_NODE).addChild("foo");
         root.commit();
 
@@ -1142,9 +1140,9 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void sortQueriesWithString_OrderedProps() throws Exception {
-        Tree idx = createIndex("test1", of("foo", "bar"));
-        idx.setProperty(createProperty(INCLUDE_PROPERTY_NAMES, of("bar"), STRINGS));
-        idx.setProperty(createProperty(ORDERED_PROP_NAMES, of("foo"), STRINGS));
+        Tree idx = createIndex("test1", Set.of("foo", "bar"));
+        idx.setProperty(createProperty(INCLUDE_PROPERTY_NAMES, Set.of("bar"), STRINGS));
+        idx.setProperty(createProperty(ORDERED_PROP_NAMES, Set.of("foo"), STRINGS));
         idx.addChild(PROP_NODE).addChild("foo");
         root.commit();
 
@@ -1153,9 +1151,9 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void sortQueriesWithStringIgnoredMulti_OrderedProps() throws Exception {
-        Tree idx = createIndex("test1", of("foo", "bar"));
-        idx.setProperty(createProperty(INCLUDE_PROPERTY_NAMES, of("bar"), STRINGS));
-        idx.setProperty(createProperty(ORDERED_PROP_NAMES, of("foo"), STRINGS));
+        Tree idx = createIndex("test1", Set.of("foo", "bar"));
+        idx.setProperty(createProperty(INCLUDE_PROPERTY_NAMES, Set.of("bar"), STRINGS));
+        idx.setProperty(createProperty(ORDERED_PROP_NAMES, Set.of("foo"), STRINGS));
         idx.addChild(PROP_NODE).addChild("foo");
         root.commit();
 
@@ -1171,7 +1169,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
         //Add a wrong multi-valued property
         Tree child = test.addChild("a");
-        child.setProperty("foo", of("w", "z"), Type.STRINGS);
+        child.setProperty("foo", Set.of("w", "z"), Type.STRINGS);
         child.setProperty("bar", "baz");
         root.commit();
 
@@ -1202,7 +1200,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void sortQueriesWithDate() throws Exception {
-        Tree idx = createIndex("test1", of("foo", "bar"));
+        Tree idx = createIndex("test1", Set.of("foo", "bar"));
         Tree propIdx = idx.addChild(PROP_NODE).addChild("foo");
         propIdx.setProperty(FulltextIndexConstants.PROP_TYPE, PropertyType.TYPENAME_DATE);
         root.commit();
@@ -1212,9 +1210,9 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void sortQueriesWithDate_OrderedProps() throws Exception {
-        Tree idx = createIndex("test1", of("foo", "bar"));
-        idx.setProperty(createProperty(INCLUDE_PROPERTY_NAMES, of("bar"), STRINGS));
-        idx.setProperty(createProperty(ORDERED_PROP_NAMES, of("foo"), STRINGS));
+        Tree idx = createIndex("test1", Set.of("foo", "bar"));
+        idx.setProperty(createProperty(INCLUDE_PROPERTY_NAMES, Set.of("bar"), STRINGS));
+        idx.setProperty(createProperty(ORDERED_PROP_NAMES, Set.of("foo"), STRINGS));
         Tree propIdx = idx.addChild(PROP_NODE).addChild("foo");
         propIdx.setProperty(FulltextIndexConstants.PROP_TYPE, PropertyType.TYPENAME_DATE);
         root.commit();
@@ -1243,9 +1241,9 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void sortQueriesWithDateStringMixed_OrderedProps() throws Exception {
-        Tree idx = createIndex("test1", of("foo", "bar"));
-        idx.setProperty(createProperty(INCLUDE_PROPERTY_NAMES, of("bar"), STRINGS));
-        idx.setProperty(createProperty(ORDERED_PROP_NAMES, of("foo"), STRINGS));
+        Tree idx = createIndex("test1", Set.of("foo", "bar"));
+        idx.setProperty(createProperty(INCLUDE_PROPERTY_NAMES, Set.of("bar"), STRINGS));
+        idx.setProperty(createProperty(ORDERED_PROP_NAMES, Set.of("foo"), STRINGS));
         Tree propIdx = idx.addChild(PROP_NODE).addChild("foo");
         propIdx.setProperty(FulltextIndexConstants.PROP_TYPE, PropertyType.TYPENAME_DATE);
         root.commit();
@@ -1278,8 +1276,8 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void sortQueriesWithStringAndLong() throws Exception {
-        Tree idx = createIndex("test1", of("foo", "bar", "baz"));
-        idx.setProperty(createProperty(ORDERED_PROP_NAMES, ImmutableSet.of("foo", "baz"), STRINGS));
+        Tree idx = createIndex("test1", Set.of("foo", "bar", "baz"));
+        idx.setProperty(createProperty(ORDERED_PROP_NAMES, Set.of("foo", "baz"), STRINGS));
         Tree propIdx = idx.addChild(PROP_NODE).addChild("baz");
         propIdx.setProperty(FulltextIndexConstants.PROP_TYPE, PropertyType.TYPENAME_LONG);
         root.commit();
@@ -1306,7 +1304,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
     @Test
     public void indexTimeFieldBoost() throws Exception {
         // Index Definition
-        Tree idx = createIndex("test1", of("propa", "propb", "propc"));
+        Tree idx = createIndex("test1", Set.of("propa", "propb", "propc"));
         idx.setProperty(FulltextIndexConstants.FULL_TEXT_ENABLED, true);
 
         Tree propNode = idx.addChild(PROP_NODE);
@@ -1343,7 +1341,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
     public void boostTitleOverDescription() throws Exception{
         NodeTypeRegistry.register(root, IOUtils.toInputStream(TestUtil.TEST_NODE_TYPE), "test nodeType");
 
-        Tree idx = createIndex("test1", of("propa", "propb"));
+        Tree idx = createIndex("test1", Set.of("propa", "propb"));
         Tree props = TestUtil.newRulePropTree(idx, TestUtil.NT_TEST);
 
         Tree title = props.addChild("title");
@@ -1392,7 +1390,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void sortQueriesWithJcrScore() throws Exception {
-        Tree idx = createIndex("test1", of("propa", "n0", "n1", "n2"));
+        Tree idx = createIndex("test1", Set.of("propa", "n0", "n1", "n2"));
         root.commit();
 
         Tree test = root.getTree("/").addChild("test");
@@ -1416,7 +1414,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
     @Test
     public void sortFulltextQueriesWithJcrScore() throws Exception {
         // Index Definition
-        Tree idx = createIndex("test1", of("propa"));
+        Tree idx = createIndex("test1", Set.of("propa"));
         idx.setProperty(FulltextIndexConstants.FULL_TEXT_ENABLED, true);
         useV2(idx);
 
@@ -1440,7 +1438,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
     // OAK-2434
     private void fulltextBooleanComplexOrQueries(boolean ver2) throws Exception {
         // Index Definition
-        Tree idx = createIndex("test1", of("propa", "propb"));
+        Tree idx = createIndex("test1", Set.of("propa", "propb"));
         idx.setProperty(FulltextIndexConstants.FULL_TEXT_ENABLED, true);
         if (ver2) {
             useV2(idx);
@@ -1758,7 +1756,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
     @Test
     public void relativePropertyAndCursor() throws Exception{
         // Index Definition
-        Tree idx = createIndex("test1", of("propa", "propb"));
+        Tree idx = createIndex("test1", Set.of("propa", "propb"));
         TestUtil.useV2(idx);
         idx.setProperty(FulltextIndexConstants.FULL_TEXT_ENABLED, true);
 
@@ -1789,8 +1787,8 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
     @Test
     public void unionSortResultCount() throws Exception {
         // Index Definition
-        Tree idx = createIndex("test1", of("propa", "propb", "propc"));
-        idx.setProperty(createProperty(ORDERED_PROP_NAMES, of("propc"), STRINGS));
+        Tree idx = createIndex("test1", Set.of("propa", "propb", "propc"));
+        idx.setProperty(createProperty(ORDERED_PROP_NAMES, Set.of("propc"), STRINGS));
         useV2(idx);
 
         // create test data
@@ -1830,8 +1828,8 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
     @Test
     public void unionSortQueries() throws Exception {
         // Index Definition
-        Tree idx = createIndex("test1", of("propa", "propb", "propc", "propd"));
-        idx.setProperty(createProperty(ORDERED_PROP_NAMES, of("propd"), STRINGS));
+        Tree idx = createIndex("test1", Set.of("propa", "propb", "propc", "propd"));
+        idx.setProperty(createProperty(ORDERED_PROP_NAMES, Set.of("propd"), STRINGS));
         useV2(idx);
 
         // create test data
@@ -1875,7 +1873,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
     @Test
     public void aggregationAndExcludeProperty() throws Exception {
         NodeTypeRegistry.register(root, IOUtils.toInputStream(TestUtil.TEST_NODE_TYPE), "test nodeType");
-        Tree idx = createIndex("test1", of("propa", "propb"));
+        Tree idx = createIndex("test1", Set.of("propa", "propb"));
         Tree props = TestUtil.newRulePropTree(idx, TestUtil.NT_TEST);
         Tree prop = props.addChild(TestUtil.unique("prop"));
         prop.setProperty(FulltextIndexConstants.PROP_NAME, "jcr:title");
@@ -1913,7 +1911,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
     @Test
     public void aggregateAndIncludeRelativePropertyByDefault() throws Exception{
         NodeTypeRegistry.register(root, IOUtils.toInputStream(TestUtil.TEST_NODE_TYPE), "test nodeType");
-        Tree idx = createIndex("test1", of("propa", "propb"));
+        Tree idx = createIndex("test1", Set.of("propa", "propb"));
         Tree props = TestUtil.newRulePropTree(idx, TestUtil.NT_TEST);
         Tree prop = props.addChild(TestUtil.unique("prop"));
         prop.setProperty(FulltextIndexConstants.PROP_NAME, "jcr:title");
@@ -1949,7 +1947,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void indexingBasedOnMixin() throws Exception {
-        Tree idx = createIndex("test1", of("propa", "propb"));
+        Tree idx = createIndex("test1", Set.of("propa", "propb"));
         Tree props = TestUtil.newRulePropTree(idx, "mix:title");
         Tree prop = props.addChild(TestUtil.unique("prop"));
         prop.setProperty(FulltextIndexConstants.PROP_NAME, "jcr:title");
@@ -1969,7 +1967,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void indexingBasedOnMixinWithInheritence() throws Exception {
-        Tree idx = createIndex("test1", of("propa", "propb"));
+        Tree idx = createIndex("test1", Set.of("propa", "propb"));
         Tree props = TestUtil.newRulePropTree(idx, "mix:mimeType");
         Tree prop = props.addChild(TestUtil.unique("prop"));
         prop.setProperty(FulltextIndexConstants.PROP_NAME, "jcr:mimeType");
@@ -2061,7 +2059,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void indexingBasedOnMixinAndRelativeProps() throws Exception {
-        Tree idx = createIndex("test1", of("propa", "propb"));
+        Tree idx = createIndex("test1", Set.of("propa", "propb"));
         Tree props = TestUtil.newRulePropTree(idx, "mix:title");
         Tree prop1 = props.addChild(TestUtil.unique("prop"));
         prop1.setProperty(FulltextIndexConstants.PROP_NAME, "jcr:title");
@@ -2091,7 +2089,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void reindexWithCOWWithoutIndexPath() throws Exception {
-        Tree idx = createIndex("test1", of("propa", "propb"));
+        Tree idx = createIndex("test1", Set.of("propa", "propb"));
         Tree props = TestUtil.newRulePropTree(idx, "mix:title");
         Tree prop1 = props.addChild(TestUtil.unique("prop"));
         prop1.setProperty(FulltextIndexConstants.PROP_NAME, "jcr:title");
@@ -2116,7 +2114,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void uniqueIdInitializedInIndexing() throws Exception{
-        Tree idx = createIndex("test1", of("propa", "propb"));
+        Tree idx = createIndex("test1", Set.of("propa", "propb"));
         Tree props = TestUtil.newRulePropTree(idx, "nt:base");
         Tree prop1 = props.addChild(TestUtil.unique("prop"));
         prop1.setProperty(FulltextIndexConstants.PROP_NAME, "jcr:title");
@@ -2150,7 +2148,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void fulltextQueryWithSpecialChars() throws Exception{
-        Tree idx = createIndex("test1", of("propa", "propb"));
+        Tree idx = createIndex("test1", Set.of("propa", "propb"));
         Tree props = TestUtil.newRulePropTree(idx, "nt:base");
         Tree prop1 = props.addChild(TestUtil.unique("prop"));
         prop1.setProperty(FulltextIndexConstants.PROP_NAME, "tag");
@@ -2182,7 +2180,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void fulltextQueryWithRelativeProperty() throws Exception{
-        Tree idx = createIndex("test1", of("propa", "propb"));
+        Tree idx = createIndex("test1", Set.of("propa", "propb"));
         Tree props = TestUtil.newRulePropTree(idx, "nt:base");
         Tree prop1 = props.addChild(TestUtil.unique("prop"));
         prop1.setProperty(FulltextIndexConstants.PROP_NAME, "jcr:content/metadata/comment");
@@ -2263,7 +2261,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void emptySuggestDictionary() throws Exception{
-        Tree idx = createIndex("test1", of("propa", "propb"));
+        Tree idx = createIndex("test1", Set.of("propa", "propb"));
         Tree props = TestUtil.newRulePropTree(idx, "nt:base");
         Tree prop1 = props.addChild(TestUtil.unique("prop"));
         prop1.setProperty(FulltextIndexConstants.PROP_PROPERTY_INDEX, true);
@@ -2278,7 +2276,7 @@ public class LucenePropertyIndexTest extends AbstractQueryTest {
 
     @Test
     public void relativePropertyWithIndexOnNtBase() throws Exception {
-        Tree idx = createIndex("test1", of("propa"));
+        Tree idx = createIndex("test1", Set.of("propa"));
         idx.setProperty(PROP_TYPE, "lucene");
         useV2(idx);
         //Do not provide type information
